--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,11 @@ jobs:
         os: [ ubuntu-latest, macos-11, windows-2019 ]
 
     steps:
+      - name: Set git to use LF
+        run: |
+          git config --system core.autocrlf false
+          git config --system core.eol lf
+  
       - name: Setup repo
         uses: actions/checkout@v3
 
