--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,10 @@ permissions:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-11, windows-2019 ]
+        target: [ x86_64-unknown-linux-gnu, x86_64-pc-windows-msvc, x86_64-apple-darwin, aarch64-apple-darwin ]
 
     # Set DENO_DIR to an absolute or relative path on the runner.
     env:
@@ -64,10 +64,10 @@ jobs:
       #   run: deno test -A --unstable
 
       - name: Compile
-        run: deno task compile
+        run: deno task compile:${{ matrix.target }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: bin
+          name: nzb
           path: dist
